# mytskine-xmlittre-web

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  stack.yaml  xmlittre.cabal
app/: devel.hs
config/: models  robots.txt  routes  settings.yml
deploy/: Procfile
sphinx/: sphinx-csv.conf.dist  sphinx-sqlite.conf.dist  stopwords.txt
sphinx/misc/: sphinx-2.0.10_sqlite.diff  sphinx-2.0.6_sqlite.diff  sphinx-2.2.5_sqlite.diff
src/: Application.hs  Foundation.hs  Model.hs  Settings.hs  devel.hs
src/Handler/: Annexes.hs  Auteur.hs  Definition.hs  Home.hs  Oeuvre.hs  SearchFullText.hs
src/Helpers/: Sidebar.hs  SphinxQL.hs  SphinxSearch.hs  Widgets.hs
templates/: default-layout-wrapper.hamlet  sidebar-layout.hamlet  sidebar-layout.lucius
templates/annexes/: causerie.hamlet  livres.hamlet  preface.hamlet  prononciation.hamlet
templates/error/: notfound.hamlet
templates/lucius/: annexes.lucius  default.lucius  definition.lucius  normalize.lucius  other.lucius  search.lucius
templates/pages/: auteur.hamlet  auteur.julius  definition.hamlet  etymologie.hamlet  faq.hamlet  homepage.hamlet  oeuvre.hamlet  proverbes.hamlet  wordNotFound.hamlet
templates/search/: citations.hamlet  definitions.hamlet  index.hamlet  proverbes.hamlet
templates/widgets/: neighbouringAuthors.hamlet  neighbours.hamlet  searchForm.hamlet  sidebar.hamlet
tests/: BaseTest.hs  DefinitionTest.hs  LinksTest.hs  SphinxTest.hs  TestImport.hs  main-tests.hs
