name:              xmlittre
version:           1.3.0
license:           OtherLicense
license-file:      LICENSE
author:            François Gannaz
maintainer:        François Gannaz
synopsis:          XMLittre web application
description:       XMLittre web application
category:          Web
stability:         Stable
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://www.littre.org/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src

    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Definition
                     Handler.Auteur
                     Handler.Oeuvre
                     Handler.Annexes
                     Handler.SearchFullText
                     Helpers.Widgets
                     Helpers.SphinxSearch
                     Helpers.SphinxQL
                     Helpers.Sidebar

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                CPP

    build-depends: base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
                 , yesod >=1.4.3 && <1.5
                 , yesod-core >= 1.4.3
                 , yesod-static >= 1.4.0
                 , yesod-form >= 1.4.0
                 , classy-prelude-yesod >=0.10.2 && <1.0 || >=1.1
                 , classy-prelude >=0.10.2
                 , classy-prelude-conduit >=0.10.2
                 , bytestring >=0.9 && <0.11
                 , text >= 0.11 && <2.0
                 , mysql-simple
                 , persistent
                 , persistent-sqlite
                 , persistent-mysql
                 , persistent-template
                 , fast-logger
                 , template-haskell
                 , hamlet                        >= 1.2
                 , shakespeare                   >= 2.0
                 , hjsmin >= 0.1 && <0.3
                 , monad-control                 >= 0.3
                 , yaml                          >= 0.8
                 , http-conduit >=2.1 && <2.3
                 , directory >=1.1 && <1.4
                 , wai-extra >=3.0 && <3.1
                 , wai
                 , warp >=3.0 && <3.3
                 , data-default
                 , aeson >=0.6 && <1.3
                 , conduit >=1.0 && <2.0
                 , file-embed
                 , monad-logger                  >= 0.3
                 , fast-logger >=2.2 && <2.5
                 , wai-logger >=2.2 && <2.4
                 , http-types
                 -- xmlittre
                 , random                        >= 1.0
                 , blaze-markup                  >= 0.5
                 , blaze-html
                 , unordered-containers
                 , yesod-paginator               >= 0.9.2

executable         xmlittre
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , xmlittre
                     , yesod

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main-tests.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions: FlexibleContexts

    build-depends: base
                 , xmlittre
                 , yesod-test >= 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , text
                 , regex-posix
                 , bytestring
                 , system-filepath
                 , system-fileio

    other-modules:
        BaseTest
      , DefinitionTest
      , LinksTest
      , SphinxTest
      , TestImport
